--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             </div>
             <div class="hero-image">
                 <div class="image-container">
-                    <img src="images/profile.jpg" alt="Foto Profil Yohanes Yosua Karno" id="profileImg">
+                    <img src="https://images.unsplash.com/photo-1551650975-87deedd944c3?w=800&h=600&fit=crop" alt="Website Project"> 
                     <div class="image-overlay">
                         <p>Yohanes Yosua Karno</p>
                     </div>
@@ -79,7 +79,7 @@
                 </div>
                 <div class="about-image">
                     <div class="image-frame">
-                        <img src="images/profile.jpg" alt="Yohanes Yosua Karno" id="aboutImg">
+                    <img src="https://images.unsplash.com/photo-1460925895917-afdab827c52f?w=800&h=600&fit=crop" alt="Dashboard Project">   
                     </div>
                 </div>
             </div>
@@ -144,7 +144,7 @@
             <div class="portfolio-grid">
                 <div class="portfolio-card">
                     <div class="portfolio-image">
-                        <img src="images/project1.jpg" alt="Proyek Website 1" id="project1">
+                        <img src="https://images.unsplash.com/photo-1499951360447-b19be8fe80f5?w=800&h=600&fit=crop" alt="Coding Project">
                         <div class="portfolio-overlay">
                             <a href="#" class="view-btn">Lihat Detail</a>
                         </div>
